# sdk-typescript

./: .gitignore  CHANGELOG.md  COMPREHENSIVE_STATUS.md  CONTRIBUTING.md  EXTRACTION.md  FEATURE_PARITY_ANALYSIS.md  IMPLEMENTATION_PLAN.md  PHASE2_COMPLETE.md  PHASE2_STATUS.md  PHASED_PLAN.md  PRODUCTION_ROADMAP.md  README.md  SECURITY.md  SESSION_PROGRESS.md  SETUP.md  TODAYS_PROGRESS.md  package-lock.json  package.json  pnpm-lock.yaml  test-native.cjs  test-retry-utils.ts  test-schema-utils.ts  test-state-span.ts  test-worker.ts  tsconfig.json
.github/workflows/: ci.yml  release.yml
docs/: QUICKSTART_LM.md  agent.md  context.md  entity.md  function.md  lm.md  overview.md  phase-5-report.md  runtime-support.md  tool.md  workflow.md
examples/: agent-example.ts  authentication.ts  basic-function.ts  checkpointing.ts  context-propagation.ts  entity-example.ts  hitl-workflow.ts  mcp-integration.ts  mcp-server.ts  multi-agent.ts  parallel-tools.ts  platform-worker.ts  simple-worker.ts  slack-chatbot.ts  streaming.ts  structured-output.ts  tool-example.ts  workerless-http.ts  workflow-example.ts
examples/workerless-cloudflare/: .gitignore  package-lock.json  package.json  wrangler.toml
examples/workerless-cloudflare/src/: index.ts
examples/workerless-deno/: README.md  deno.json  main.ts
examples/workerless-hono/: README.md  package.json
examples/workerless-hono/src/: app.ts
examples/workerless-node/: README.md  package.json
examples/workerless-node/src/: server.ts
examples/workerless-vercel/: README.md
examples/workerless-vercel/app/.well-known/agnt5/: route.ts
examples/workerless-vercel/app/agnt5/invoke/: route.ts
examples/workerless-vercel/src/: agnt5-workerless.ts
native/: Cargo.toml
native/src/: chat.rs  lib.rs  lm.rs  mcp.rs  memory.rs  sandbox.rs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
scripts/: build-all.sh
src/: agent.ts  agents-md.ts  async-context.ts  batch.ts  chat.ts  client.ts  context.ts  entity.ts  errors.ts  eval.ts  event-emitter.ts  events.ts  flow-control.ts  function-registry.ts  function.ts  index.ts  lm.ts  logging.ts  mcp-server.ts  mcp.ts  memory.ts  native-loader.ts  platform-adapters.ts  platform-context.ts  prompt-executor.ts  prompt-manifest.ts  retry-utils.ts  runtime-context.ts  sandbox-providers.ts  sandbox-tools.ts  sandbox.ts  schema-utils.ts  scorer.ts  serverless-cloudflare.ts  serverless-node.ts  serverless.ts  skills.ts  state.ts  tool.ts  tracing.ts  (+10 more)
src/__tests__/: agent-callbacks.test.ts  agent-streaming.test.ts  agent.test.ts  agents-md.test.ts  async-context.test.ts  batch.test.ts  client.test.ts  context.test.ts  entity.test.ts  eval.test.ts  events.test.ts  function.test.ts  hitl.test.ts  lm-runtime-context.test.ts  lm.test.ts  mcp-server.test.ts  mcp.test.ts  memory.test.ts  platform-adapters.test.ts  prompt-executor.test.ts  prompt-manifest.test.ts  retry-utils.test.ts  sandbox-providers.test.ts  sandbox.test.ts  schema-utils.test.ts  scorer-esm.test.ts  scorer-goldens.test.ts  scorer.test.ts  serverless-node.test.ts  serverless.test.ts  skills.test.ts  state-span.test.ts  state.test.ts  tool.test.ts  tracing.test.ts  worker-dispatch.test.ts  worker-integration.test.ts  worker-memory.test.ts  worker.test.ts  workerless-cloudflare.test.ts  (+2 more)
src/__tests__/integration/: batch.integration.test.ts  function.integration.test.ts  helpers.ts  streaming.integration.test.ts
test-fixtures/eval/: builtin_goldens.json
wasm/: Cargo.toml
wasm/src/: lib.rs
