[package]
name = "agnt5-sdk-native"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI bindings
napi = { version = "2", features = ["async", "tokio_rt"] }
napi-derive = "2"

# Link to sdk-core
agnt5-sdk-core = { path = "../../sdk-core" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.14"

# HTTP utilities
http = "1.1"
reqwest = { version = "0.12", features = ["json"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Async channels
flume = "0.11"

[build-dependencies]
napi-build = "2"
